tests/rustdoc-ui/invalid-cfg.stderr
error: `cfg` is not followed by parentheses
  --> $DIR/invalid-cfg.rs:2:7
   |
LL | #[doc(cfg = "x")]
   |       ^^^^^^^^^ help: expected syntax is: `cfg(/* predicate */)`

error: multiple `cfg` predicates are specified
  --> $DIR/invalid-cfg.rs:3:14
   |
LL | #[doc(cfg(x, y))]
   |              ^

error: `cfg` is not followed by parentheses
  --> $DIR/invalid-cfg.rs:7:7
   |
LL | #[doc(cfg = "x")]
   |       ^^^^^^^^^ help: expected syntax is: `cfg(/* predicate */)`

error: multiple `cfg` predicates are specified
  --> $DIR/invalid-cfg.rs:8:14
   |
LL | #[doc(cfg(x, y))]
   |              ^

error: `cfg` is not followed by parentheses
  --> $DIR/invalid-cfg.rs:12:7
   |
LL | #[doc(cfg = "x")]
   |       ^^^^^^^^^ help: expected syntax is: `cfg(/* predicate */)`

error: multiple `cfg` predicates are specified
  --> $DIR/invalid-cfg.rs:13:14
   |
LL | #[doc(cfg(x, y))]
   |              ^

error: `cfg` is not followed by parentheses
  --> $DIR/invalid-cfg.rs:18:7
   |
LL | #[doc(cfg = "x")]
   |       ^^^^^^^^^ help: expected syntax is: `cfg(/* predicate */)`

error: multiple `cfg` predicates are specified
  --> $DIR/invalid-cfg.rs:19:14
   |
LL | #[doc(cfg(x, y))]
   |              ^

error: aborting due to 8 previous errors

